# boarderless

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: resize.rs  titlebar.rs
ui/: resize.slint  titlebar.slint
